# quorum-extract

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo.py  invoice_project.py
src/quorum_extract/: __init__.py  agreement.py  budget.py  calibration.py  cascade.py  cli.py  config.py  diagnostics.py  extractors.py  human.py  normalize.py  pipeline.py  quorum.py  report.py  schema.py  types.py
tests/: __init__.py  _helpers.py  conftest.py  test_budget.py  test_calibration.py  test_cascade.py  test_cli.py  test_config.py  test_diagnostics.py  test_extractors.py  test_human.py  test_normalize.py  test_pipeline.py  test_quorum.py  test_report.py  test_schema.py
