[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quorum-extract"
version = "0.1.0"
description = "Field-level quorum extraction: vote across cheap models, calibrate agreement into confidence, escalate only contested fields."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Mykola Podpriatov" }]
keywords = [
    "extraction",
    "pydantic",
    "ensemble",
    "calibration",
    "llm",
    "quorum",
    "structured-data",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "typer>=0.9",
    "rich>=13.0",
    "python-dateutil>=2.8",
]

[project.urls]
Homepage = "https://github.com/mykolapodpriatov/quorum-extract"
Repository = "https://github.com/mykolapodpriatov/quorum-extract"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
ollama = ["ollama>=0.4"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.scripts]
quorum-extract = "quorum_extract.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/quorum_extract"]

[tool.hatch.build.targets.sdist]
include = ["src/quorum_extract", "README.md", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "B008", # function calls in argument defaults (typer.Option idiom)
]

[tool.ruff.lint.per-file-ignores]
# Tests use throwaway stub doubles and long literal fixtures; RUF012 (mutable
# class-attr defaults) is idiomatic for those fakes.
"tests/*" = ["E501", "RUF012"]
# Examples carry wide, deliberately-aligned canned data literals.
"examples/*" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["quorum_extract"]

[tool.mypy]
# python_version is intentionally left unset so mypy parses third-party stubs
# (e.g. numpy's 3.12+ `type` statements) with the running interpreter. The
# >=3.11 source compatibility is enforced by the CI test matrix.
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "scipy.*", "dateutil.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = ["error::DeprecationWarning:quorum_extract.*"]

[tool.coverage.run]
branch = true
source = ["quorum_extract"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]
